# SciStag

./: .coveragerc  .gitignore  LICENSE.md  README.md  THANKS.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: test_ubuntu_python.yml  test_windows_python.yml
docs/: TODOs.txt  build_html.sh  build_quick.sh  external_links.txt  requirements.txt  update_requirements.sh
docs/dev/: release_guide.md
docs/source/: .gitignore  api.rst  conf.py  custom_generator.py  index.rst
docs/source/_templates/: custom-class-template.rst
scistag/: __init__.py  __main__.py
scistag/addons/: __main__.py  addon_manager.py
scistag/cli/: cli_demo.py  main_cli.py
scistag/common/: __init__.py  cache.py  cache_ref.py  classes.py  component.py  config_stag.py  configuration.py  data_cache.py  dict_helper.py  disk_cache.py  env.py  essential_data.py  iter.py  iter_helper.py  list_helper.py  observer.py  stag_app.py  sytem_info.py  test_data.py
scistag/common/mt/: __init__.py  managed_thread.py  stag_lock.py  task_thread.py
scistag/common/threading/: __init__.py
scistag/common/time/: __init__.py
scistag/common/trees/: __init__.py  text_tree.py  tree_node.py
scistag/cutestag/: __init__.py
scistag/cutestag/browser/: __init__.py  browser_app.py
scistag/data/: .gitignore  addon_packages.json
scistag/datastag/: __init__.py  data_stag_command_handler.py  data_stag_common.py  data_stag_connection.py  data_stag_element.py  data_stag_list.py  data_stag_vault.py
scistag/datastag/flask/: data_stag_blueprint.py
scistag/datastag4flask/: data_stag_blueprint.py
scistag/emojistag/: __init__.py  emoji_db.py  emoji_definitions.py  emoji_info.py  emoji_renderer.py
scistag/examples/imagestag/: filter_overview.py  image.py  image_cv2.py  image_filter.py
scistag/examples/logstag/: live_camera.py  visual_progress_log.py
scistag/examples/mediastag/: video.py  webcam.py
scistag/examples/plotstag/: __init__.py  image_plotting.ipynb
scistag/examples/slidestag/: simple_slide.py
scistag/examples/vislog/: __init__.py  embed_doc.md  embed_doc.py  getting_started.py  image_upload.py  live_camera.py  slider_demo.py  vl_01_01_hello_world.py  vl_01_02_hello_world_advanced.py  vl_01_03_hello_world_final.py  vl_02_01_local_server.py  vl_02_03_local_server_with_cache.py  vl_05_01_data_frames.py
scistag/extras/: jinja.py
scistag/filestag/: __init__.py  archive_file_sink.py  azure_storage_file_sink.py  azure_storage_file_source.py  bundle.py  file_observer.py  file_path.py  file_sink.py  file_sink_azure_storage.py  file_source.py  file_source_azure_storage.py  file_source_disk.py  file_source_iterator.py  file_source_observer.py  file_source_zip.py  file_stag.py  memory_zip.py  protocols.py  shared_archive.py  zip_file_sink.py
scistag/filestag/azure/: __init__.py  azure_blob_path.py  azure_storage_file_sink.py  azure_storage_file_source.py
scistag/filestag/bundlers/: __init__.py  dataframe_bundler.py  numpy_bundler.py
scistag/filestag/sinks/: __init__.py  archive_file_sink.py  file_sink_disk.py  file_sink_zip.py
scistag/filestag/sources/: __init__.py  file_source_disk.py  file_source_zip.py
scistag/filestag4azure/: __init__.py  file_source_azure_storage.py
scistag/gitstag/: __init__.py  git_scanner.py
scistag/imagestag/: __init__.py  anchor2d.py  ascii_image.py  bounding.py  canvas.py  color.py  definitions.py  font.py  font_registry.py  formatted_text.py  html_renderer.py  image.py  image_base.py  image_filter.py  interpolation.py  pandas_renderer.py  pixel_format.py  pos2d.py  size2d.py  svg.py  terminal_colors.json  text_alignment_definitions.py
scistag/imagestag/filters/: __init__.py  color_map_filter.py  (+5 more)
scistag/jupystag/: __init__.py
scistag/logstag/: __init__.py  console_stag.py  log_level.py  logger.py
scistag/mediastag/: __init__.py  camera_cv2.py  video_source.py  video_source_camera.py  video_source_camera_cv2.py  video_source_datastag.py  video_source_movie.py
scistag/netstag/: __init__.py  net_helper.py
scistag/optional/: __init__.py  pyarrow_opt.py
scistag/plotstag/: __init__.py  figure.py  matplot_helper.py  matplot_lock.py  plot.py  plot_layer.py
scistag/remotestag/: __init__.py  service.py  service_function.py  service_handler.py  service_task.py  service_worker.py  session.py  session_handler.py
scistag/shapestag/: __init__.py  checkerboard.py  polygon.py  shape.py  shape_list.py
scistag/slidestag/: __init__.py  base_events.py  button.py  event.py  event_router.py  slide.py  slide_application_manager.py  slide_session.py  video_player.py  widget.py  window.py
scistag/slidestag4flask/: __init__.py  simple_slideserver.py
scistag/slidestag4kivy/: __init__.py
scistag/tests/: .gitignore  __init__.py  config.py  test_config_template.json  visual_test_log_scistag.py
scistag/vislog/: __init__.py  cells.py  log_builder.py  log_builder_registry.py  log_elements.py  options.py  pyplot_log_context.py  visual_image_logger.py  visual_log.py  visual_log_autoreloader.py  visual_log_basic_logger.py  visual_log_builder.py  visual_log_element_context.py  visual_log_mock.py  visual_log_renderer.py  visual_log_renderer_html.py  visual_log_service.py  visual_log_statistics.py  visual_log_table_builder.py  visual_log_test_helper.py  visual_micro_log.py  visual_table_logger.py  visual_test_log.py  visual_time_logger.py
scistag/webstag/: __init__.py  mime_types.py  server_options.py  web_fetch.py  web_helper.py
tools/: clear.sh
tools/build_wheel/: build_wheel.sh
tools/coverage/: coverage_report.sh
tools/export_requirements/: export_requirements.xt
tools/lint/: lint_stag.sh
tools/test_parallel/: test_parallel.sh
tools/test_wheel/: pyproject.toml  run_test.sh  test_wheel.sh
workbench/: README.md  test.html
workbench/logstag/: auto_reloading.py  auto_reloading_module.py
workbench/slidestag/: __init__.py  base_events.py  data_frame_viewer.py  event_router.py  simple_slide.py  slide.py  slide_application.py  slide_application_manager.py  slide_manager.py  slide_session.py  slide_theme.py  timer.py  video_player.py  widget.py  window.py
(+402 files in other folders)
