[tool.poetry]
name = "TestSciStagWheel"
version = "0.0.3"
description = "Test's the installation of the SciStag wheel and executes all unit tests"
authors = ["Michael Ikemann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
scistag = { path = "../../dist/scistag-0.0.3-py3-none-any.whl", extras = ["full"] }


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.7.0"
pytest-order = "^1.0.1"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
